# oumi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: phi3.lora.yaml
notebooks/: LeMa - Colab Setup Example.ipynb
scripts/: finetune_sft_phi3.sh
src/lema/: __init__.py  evaluate.py  train.py
src/lema/builders/: __init__.py  data.py  models.py  training.py
src/lema/core/: types.py
src/lema/datasets/: alpaca.py
src/lema/utils/: saver.py
tests/: test_config.py
