[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
lema = ["LICENSE", "README.md"]

[tool.setuptools_scm]
# default scm config.

[tool.setuptools]
# default setuptools config.

[tool.setuptools.packages.find]
include = ["lema", "lema.*"]
exclude = []


[project]
name = "lema"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
description = "Learning Machines - Modeling Platform"
authors = [{ name = "LeMa Team", email = "contact@openlema.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = ["transformers"]

[project.urls]
Homepage = "https://github.com/openlema/lema"
Issues = "https://github.com/openlema/lema/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "isort", "mypy"]
train = ["click", "datasets", "torchmetrics"]
all = ["lema[dev,train]"]

[project.scripts]
lema-cli = "lema:main"

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"] # Include ipython notebooks
ignore = ["D104"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E, W), isort (I), pydocstyle (D)
select = ["F", "E", "W", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
check_untyped_defs = true