[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
lema = ["LICENSE", "README.md"]

[tool.setuptools_scm]
# default scm config.

[tool.setuptools]
# default setuptools config.


[project]
name = "lema"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
description = "Learning Machines - Modeling Platform"
authors = [{ name = "LeMa Team", email = "contact@openlema.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = ["transformers"]

[project.urls]
Homepage = "https://github.com/openlema/lema"
Issues = "https://github.com/openlema/lema/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "isort", "mypy"]
train = [
    "transformers",
    "trl",
    "peft",
    "datasets",
    "omegaconf",
    "datasets",
    "torchmetrics",
    "sentencepiece",   # for phi-3
    "flash-attention", # for phi-3
]
all = ["lema[dev,train]"]

[project.scripts]
lema-train = "lema.train:main"
lema-evaluate = "lema.evaluate:main"

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"] # Include ipython notebooks

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E, W), isort (I), pydocstyle (D)
select = ["F", "E", "W", "I", "D"]
ignore = ["D100", "D101", "D104"]  # Temporary rules

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring checks in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
known_first_party = ["lema"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.8"
pythonPlatform = "All"  # Include linux, mac, windows

reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]